sixteenth homework done

--- a/homework16/src/main/resources/application.yml
+++ b/homework16/src/main/resources/application.yml
@@ -34,7 +34,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: health,logfile
   endpoint:
     health:
       show-details: always
